Fix images size on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ footer {
 }
 
 .join-us li a {
-    font-size: 25px;
+    font-size: 35px;
 }
 
 footer li a {
@@ -248,4 +248,26 @@ tr:hover {
 
 .smaller-text {
     font-size: 50px;
+}
+
+/* ------------------- Media Query ------------------- */
+@media (max-width: 410px) {
+    /* global */
+    .list-inline > li {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+    /* footer */
+    footer {
+        margin-top: 20px;
+    }
+
+    /* view_ad.html */
+    .view-img {
+    width: 100%;
+    height: 220px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 10px;
+    }
 }
